ui: alerts, form, form-group, multi-select
- component: alert
- combos: alerts, form, form-group, multi-select
- helper: locals: 'props'
- helper: consistent #classes_from_string

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -178,6 +178,7 @@
     margin-botom: 0
 
 // Home/root: login: adjust for max. height of tab contents
+// TODO: just scope .pitch-login (styleguide ref update)
 [data-view="application"][data-action="root"]
   .tab-content
     min-height: 220px
