--- a/app/views/application/_login_box.haml
+++ b/app/views/application/_login_box.haml
@@ -1,37 +1,37 @@
-- internal_login_form = capture_haml do
-  = form_tag sign_in_path, id: 'login_form' do
-    .form-body
-      .ui-form-group.rowed.compact
-        = text_field_tag :login, nil,
-          { placeholder: 'login', class: 'block large' }
-      .ui-form-group.rowed.compact
-        = text_field_tag :password, nil,
-          { placeholder: 'password',
-            type: 'password',
-            class: 'block large' }
-      .ui-form-group.rowed.compact.by-left
-        = check_box_tag :remember_me, 'remember me'
-        remember me
-      .ui-form-group.rowed.compact
-        = component('button.primary', mods: ['large', 'block'],
-                                      type: 'submit') do
-          = "Anmelden"
+- internal_login = combo('form',props: { id: 'login_form',
+                                         action: sign_in_path,
+                                         method: :post }) do
 
-- unless settings.zhdk_integration
+  = combo('form-group', mods: 'rowed.compact') do
+    = text_field_tag(:login, nil, { placeholder: 'login', class: 'block large' })
+
+  = combo('form-group', mods: 'rowed.compact') do
+    = text_field_tag(:password, nil, { placeholder: 'password', type: 'password',
+                                       class: 'block large' })
+
+  = combo('form-group', mods: 'rowed.compact.by-left') do
+    = check_box_tag(:remember_me, 'remember me', true)
+    = label(:remember, :me, 'remember me')
+
+  = combo('form-group', mods: 'rowed.compact') do
+    = component('button.primary', mods: ['large', 'block'],
+        type: 'submit') do
+      = "Anmelden"
+
+- unless settings.zhdk_integration # show simple auth form:
   .pitch-login
     .tab-content.ui-container
-      = internal_login_form
-- else
-  - zhdk_login_form = capture_haml do
-    %form
-      .form-body
-        .ui-form-group.rowed
-          %p.mbm
-            Alle Funktionen nutzen und auf
-            %br/
-            mehr Inhalte zugreifen.
-          = component('button.primary', mods: ['large', 'block'], href: '/login') do
-            = "Anmelden"
+      = internal_login
+
+- else # … or show zhdk auth; make tabbed section:
+  - zhdk_login_form = combo('form') do
+    = combo('form-group', mods: 'rowed') do
+      %p.mbm
+        Alle Funktionen nutzen und auf
+        %br/
+        mehr Inhalte zugreifen.
+      = component('button.primary', mods: ['large', 'block'], href: '/login') do
+        = "Anmelden"
 
   :ruby
     login_box = combo('tabbed-sections', {
@@ -41,18 +41,12 @@
       list: {
         external_login: {
           active: true,
-          nav: {
-            align: 'left',
-            text: 'ZHdK-Login'
-          },
+          nav: { text: 'ZHdK-Login', align: 'left' },
           content: zhdk_login_form,
         },
         internal_login: {
-          nav: {
-            align: 'right',
-            text: 'Externe'
-          },
-          content: internal_login_form,
+          nav: { text: 'Externe', align: 'right' },
+          content: internal_login,
           }
         }
       })
