ui: form-group: nest controls into labels
so 'for=$control' does not have to be specified and Just Works™

--- a/app/assets/stylesheets/components/_ui-form-group.sass
+++ b/app/assets/stylesheets/components/_ui-form-group.sass
@@ -3,6 +3,7 @@
  *----------------------------------------- */
 
 .ui-form-group
+  display: block
   padding: $space-m $space-s
   position: relative
   > .form-label
