feat: MediaEntry upload/publish flow
- controller: 'publish' action for Entries
- model: User: relations by (un-)published
- model: MediaEntry: default scope is_published=true
- view: my: dashboard: #unpublished
- view: media_entry: show: unpublished_header
- policy: MediaEntry: show: allow unpublished for creator
- ui: polybox: fix fallback

--- a/app/ui_elements/decorators/meta_data_by_vocabulary.haml
+++ b/app/ui_elements/decorators/meta_data_by_vocabulary.haml
@@ -1,8 +1,7 @@
 :ruby
-  unless @get.meta_data.is_a?(Presenters::MetaData::MetaDataPresenter)
+  unless meta_data.is_a?(Presenters::MetaData::MetaDataPresenter)
     fail 'ui: not a MetaDataPresenter!'
   end
-  meta_data = @get.meta_data
 
   # TODO: app config, partial arguments
   summary_vocab = 'madek_core'
