--- a/app/views/media_entries/new.html.haml
+++ b/app/views/media_entries/new.html.haml
@@ -1,25 +1,32 @@
-= form_for :media_entry, url: media_entries_path do |me_form|
+.app-body-ui-container
+  = component('page-header',
+      icon: component('icon.upload'),
+      text: 'Medien importieren ',
+      actions: nil)
 
-  = me_form.label :responsible_user_id, class: 'title-s'
-  = me_form.text_field :responsible_user_id, value: current_user.id
+  -# complete box (under the title):
+  .ui-container.tab-content.bordered.rounded-right.rounded-bottom.mbh
 
-  %hr.separator.mini.mvs
+    -# top part of the box:
+    .ui-container.bright.pal{class: 'rounded-bottom'}
 
-  = me_form.label :creator_id, class: 'title-s'
-  = me_form.text_field :creator_id, value: current_user.id
+      = form_for :media_entry, url: media_entries_path do |f|
 
-  %hr.separator.mini.mvs
+        .ui-container.clearfix.mvl.bordered.midtone.rounded.media-import-content
+          = combo('form-group', mods: 'rowed.by-center', label: { text: 'File'}) do
+            = f.file_field :media_file
 
-  = me_form.fields_for :media_file do |mf_form|
+        .ui-actions
+          %a.link.weak{href: my_dashboard_path}
+            = "Back"
+          = component('button.primary', props: { type: :submit }) do
+            = "Upload"
 
-    = mf_form.label :file, class: 'title-s'
-    = mf_form.file_field :file
-
-    %hr.separator.mini.mvs
-
-    = mf_form.label :uploader_id, class: 'title-s'
-    = mf_form.text_field :uploader_id, value: current_user.id
-
-  %hr.separator.mini.mvs
-
-  = me_form.submit :submit
+    -# bottom part of the box:
+    .row.ui-container.midtone.pvm.phl.rounded-bottom
+      .row
+        .col1of2
+          %h3.title-m.prm
+            %strong= "Hinweise"
+          %p.prm.ptx
+            = "TODO"
