ui: helper: cleanup, fixes
- config: list: compact arrays
- also some cleanup

--- a/app/ui_elements/components/page-header.haml
+++ b/app/ui_elements/components/page-header.haml
@@ -10,7 +10,7 @@
       = icon
       = text
 
-  - if actions.is_a?(Enumerable)
+  - if actions.is_a?(Array)
     .ui-body-title-actions
       - actions.each do |btn|
         = btn
