--- a/app/ui_elements/decorators/vocabulary_meta_data_table.haml
+++ b/app/ui_elements/decorators/vocabulary_meta_data_table.haml
@@ -6,17 +6,18 @@
   vocabulary = data._vocabulary
   meta_data = data._meta_data
 
-%h3.separated.mbm.title-l= vocabulary.label
--# TODO: vocabulary description, privacy_status
-%table.ui-metadata-table.borderless
-  %tbody
-    - meta_data.each do |meta_datum|
-      - key = meta_datum._key
-      - values = meta_datum._values
-      - url = meta_datum._url
-      %tr
-        %td.ui-summary-label{data: { meta_key: key.id}}
-          = link_to key.label, url, class: 'weak'
-        %td.ui-summary-content
-          -# decorate value by type (ex.: /decorators/meta_datum/text.haml)
-          = deco(key.type.underscore, values: values)
+.ui-metadata-box{class: classes}
+  %h3.separated.mbm.title-l= vocabulary.label
+  -# TODO: vocabulary description, privacy_status
+  %table.ui-metadata-table.borderless
+    %tbody
+      - meta_data.each do |meta_datum|
+        - key = meta_datum._key
+        - values = meta_datum._values
+        - url = meta_datum._url
+        %tr
+          %td.ui-summary-label{data: { meta_key: key.id}}
+            = link_to key.label, url, class: 'weak'
+          %td.ui-summary-content
+            -# decorate value by type (ex.: /decorators/meta_datum/text.haml)
+            = deco(key.type.underscore, values: values)
