--- a/app/ui_elements/combos/metadata-box.haml
+++ b/app/ui_elements/combos/metadata-box.haml
@@ -1,8 +1,8 @@
 :ruby
-  return unless list
-  def no_content?(key, value)
-    key.nil? || value.nil? || (defined?(value.empty?) && value.empty?)
-  end
+  list ||= nil
+  title ||= nil
+  skip_empty ||= true
+  return unless list.present?
 
 .ui-metadata-box
   %table.borderless
@@ -11,7 +11,7 @@
         - key = item[0]
         - value = item[1]
         - mod = item[2]
-        - unless no_content?(key, value)
+        - unless skip_empty && !value.present?
           %tr
             %td.ui-summary-label= key
             %td.ui-summary-content{class: mod}= value
