admin io interfaces [#99034966]
Conflicts:
	app/controllers/admin/io_mappings_controller.rb
	app/views/layouts/admin.html.haml
	config/routes.rb
	spec/controllers/admin/io_mappings_controller_spec.rb

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -36,6 +36,7 @@
                 IO
                 %b.caret
               %ul.dropdown-menu
+                = navbar_item 'IO Interfaces', admin_io_interfaces_path
                 = navbar_item 'IO Mappings', admin_io_mappings_path
             %li.dropdown
               %a.dropdown-toggle{href: '#', data: { toggle: 'dropdown' }}
