--- a/app/views/admin/keywords/index.html.haml
+++ b/app/views/admin/keywords/index.html.haml
@@ -1,6 +1,6 @@
 .page-header
   %h1
-    Keyword Terms
+    Keywords
     %small Vocabulary: #{@vocabulary.id}
 
 .row
@@ -9,17 +9,17 @@
       .panel-heading
         .panel-title Filters
       .panel-body
-        = form_tag admin_vocabulary_keyword_terms_path(@vocabulary), method: :get, class: 'form-inline' do
+        = form_tag admin_vocabulary_keywords_path(@vocabulary), method: :get, class: 'form-inline' do
           .form-group
             = text_field_tag :search_term, params[:search_term], size: 50,
               class: 'form-control', placeholder: 'ID, term or MetaKey'
 
           = submit_tag 'Apply', class: 'btn btn-primary'
-          = link_to 'Reset', admin_vocabulary_keyword_terms_path(@vocabulary), class: 'btn btn-default'
+          = link_to 'Reset', admin_vocabulary_keywords_path(@vocabulary), class: 'btn btn-default'
     .btn-group
-      = link_to new_admin_vocabulary_keyword_term_path(@vocabulary), class: 'btn btn-default' do
+      = link_to new_admin_vocabulary_keyword_path(@vocabulary), class: 'btn btn-default' do
         %i.glyphicon.glyphicon-plus
-        Create Keyword Term
+        Create Keyword
 
 .row
   .col-xs-12
@@ -28,9 +28,9 @@
         %tr
           %th ID
           %th MetaKey
-          %th Term
+          %th Keyword
           %th
       %tbody
-        = render @keyword_terms
+        = render @keywords
 
-= paginate @keyword_terms
+= paginate @keywords
